--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,21 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
+
 @import url(../blocks/page/page.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__two-columns/profile__two-columns.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__vector/profile__vector.css);
+
+@import url(../blocks/info/info.css);
+@import url(../blocks/info/__name/info__name.css);
+@import url(../blocks/info/__description/info__description.css);
+@import url(../blocks/info/__edit-button/info__edit-button.css);
+@import url(../blocks/info/__container/info__container.css);
+
