--- a/blocks/info/__description/info__description.css
+++ b/blocks/info/__description/info__description.css
@@ -4,6 +4,9 @@
   font-weight: 400;
   color: white;
   margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 900px) {
