--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,10 +1,15 @@
 .profile__add-button {
-
   border: 2px solid white;
   width: 150px;
   height: 50px;
   justify-self: end;
   background-color: black;
+  opacity: 1;
+  transition: opacity .1s linear;
+}
+
+.profile__add-button:hover {
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 768px) {
