--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,10 +1,12 @@
 .profile__avatar {
   max-width: 120px;
-  margin: 0
+  margin: 0;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 769px) {
   .profile__avatar {
-    margin-bottom: 36px;
+    margin-bottom: 22.25px;
   }
 }
