--- a/pages/index.css
+++ b/pages/index.css
@@ -11,11 +11,32 @@
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
-@import url(../blocks/profile/__vector/profile__vector.css);
 
 @import url(../blocks/info/info.css);
+@import url(../blocks/info/__container/info__container.css);
 @import url(../blocks/info/__name/info__name.css);
 @import url(../blocks/info/__description/info__description.css);
 @import url(../blocks/info/__edit-button/info__edit-button.css);
-@import url(../blocks/info/__container/info__container.css);
 
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__picture/card__picture.css);
+@import url(../blocks/card/__container/card__container.css);
+@import url(../blocks/card/__description/card__description.css);
+@import url(../blocks/card/__like/card__like.css);
+@import url(../blocks/card/__like/_active/card__like_active.css);
+@import url(../blocks/card/__vector/card__vector.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__profile-info/popup__profile-info.css);
+@import url(../blocks/popup/__name/popup__name.css);
+@import url(../blocks/popup/__description/popup__description.css);
+@import url(../blocks/popup/__submit-button/popup__submit-button.css);
