--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -7,11 +7,14 @@
   font-size: 14px;
   line-height: 16.94px;
   padding: 0;
-  margin: 40px 0 0;
+  margin: 47px 0 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 589px) {
   .popup__name {
-    margin: 65px 0 0;
+    margin: 76px 0 0;
   }
 }
