--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,7 +9,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
 }
 
 @media screen and (max-width: 589px) {
