--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,9 +3,11 @@
   width: 150px;
   height: 50px;
   justify-self: end;
-  background-color: black;
+  background-color: transparent;
   opacity: 1;
   transition: opacity .1s linear;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
