--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,6 +2,7 @@
   max-width: 880px;
   display: grid;
   grid-template-columns: repeat(auto-fill,282px);
+  grid-template-rows: repeat(2,361px);
   row-gap: 20px;
   column-gap: 17px;
   margin: 0 auto;
