--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -8,6 +8,7 @@
   color: black;
   font-family: 'Inter', Arial, sans-serif;
   box-sizing: border-box;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
 }
 
 @media screen and (max-width: 757px) {
