--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__description {
+.popup__input {
   width: 100%;
   color: #000;
   border: 0;
@@ -6,15 +6,9 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 16.94px;
-  padding: 0;
-  margin: 40px 0 0;
+  padding-bottom: 10px;
+  margin: 0;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-}
-
-@media screen and (max-width: 589px) {
-  .popup__description {
-    margin: 20px 0 0;
-  }
 }
