--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,17 +3,9 @@
   position: fixed;
   background: rgba(0,0,0,.5);
   justify-content: center;
-  align-items: flex-start;
-  padding-top: 195px;
+  align-items: center;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
-}
-
-@media screen and (max-width: 589px) {
-  .popup {
-    padding-top: 123px;
-  }
 }
