--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,4 +1,4 @@
-.info__description {
+.profile__description {
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
@@ -7,18 +7,20 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  max-width: 336px;
 }
 
 @media screen and (max-width: 900px) {
-  .info__description {
+  .profile__description {
     font-size: 14px;
     line-height: 17px;
   }
 }
 
 @media screen and (max-width: 769px) {
-  .info__description {
+  .profile__description {
     text-align: center;
     margin-bottom: 36px;
+    max-width: 282px;
   }
 }
