--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,4 @@
 .popup {
-  display: none;
   position: fixed;
   background: rgba(0,0,0,.5);
   justify-content: center;
@@ -8,4 +7,7 @@
   height: 100%;
   top: 0;
   left: 0;
+  visibility: collapse;
+  opacity: 0;
+  transition: opacity .3s ease;
 }
