--- a/src/blocks/profile/__avatar-container/profile__avatar-container.css
+++ b/src/blocks/profile/__avatar-container/profile__avatar-container.css
@@ -2,29 +2,36 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  object-fit: cover;
   overflow: hidden;
   position: relative;
+  border: none;
   padding: 0;
   margin: 0;
-  border: none;
   cursor: pointer;
 }
 
+@media screen and (max-width: 769px) {
+  .profile__avatar-container {
+    margin-bottom: 22.25px;
+  }
+}
+
 .profile__avatar-container::before {
-  opacity: 0;
-  content: "";
-  position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #000000cc;
+  content: "";
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
   background-image: url('../../../images/Vector.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 26px 26px;
   border-radius: 50%;
+  opacity: 0;
 }
 
 .profile__avatar-container:hover::before {
   opacity: 1;
-  transition: all 0.3s;
+  transition: opacity .3s ease;
 }
