--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,10 @@
 .profile__avatar {
-  max-width: 120px;
+  width: 100%;
+  height: 100%;
   margin: 0;
   border-radius: 50%;
   object-fit: cover;
+  object-position: center;
 }
 
 @media screen and (max-width: 769px) {
