--- a/src/blocks/card/__picture/card__picture.css
+++ b/src/blocks/card/__picture/card__picture.css
@@ -3,4 +3,7 @@
   border-radius: 10px 10px 0 0;
   width: 282px;
   height: 282px;
+  min-height: 282px;
+  min-width: 282px;
+  object-fit: cover;
 }
