--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -7,7 +7,8 @@
   height: 100%;
   top: 0;
   left: 0;
-  visibility: collapse;
   opacity: 0;
-  transition: opacity .3s ease;
+  display: flex;
+  transition: all 0.4s;
+  visibility: hidden;
 }
