--- a/main.css
+++ b/main.css
@@ -4,32 +4,36 @@
 .header{border-bottom:1px solid rgba(84,84,84,.7);margin:0 auto;max-width:880px;padding-bottom:41px;padding-top:45px}@media screen and (max-width:900px){.header{padding-bottom:31.6px;padding-top:28px}}
 .header__logo{max-height:33px;max-width:142px}@media screen and (max-width:900px){.header__logo{margin-left:27px;max-height:24.4px;max-width:103.74px}}
 .profile{align-items:center;-moz-column-gap:30px;column-gap:30px;display:grid;grid-template-columns:120px 1fr 1fr;margin:0 auto;max-width:880px;padding-bottom:47.25px;padding-top:36.25px}@media screen and (max-width:900px){.profile{max-width:700px;padding-bottom:36px;padding-top:38.25px}}@media screen and (max-width:769px){.profile{display:flex;flex-direction:column;justify-content:center;max-width:282px}}
-.profile__avatar{border-radius:50%;margin:0;max-width:120px;-o-object-fit:cover;object-fit:cover}@media screen and (max-width:769px){.profile__avatar{margin-bottom:22.25px}}
+.profile__avatar{border-radius:50%;height:100%;margin:0;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;width:100%}@media screen and (max-width:769px){.profile__avatar{margin-bottom:22.25px}}
+.profile__avatar-container{border:none;border-radius:50%;cursor:pointer;height:120px;margin:0;-o-object-fit:cover;object-fit:cover;overflow:hidden;padding:0;position:relative;width:120px}@media screen and (max-width:769px){.profile__avatar-container{margin-bottom:22.25px}}.profile__avatar-container:before{background-color:rgba(0,0,0,.8);background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;background-size:26px 26px;border-radius:50%;content:"";height:100%;opacity:0;position:absolute;width:100%}.profile__avatar-container:hover:before{opacity:1;transition:opacity .3s ease}
 .profile__add-button{background-color:transparent;border:2px solid #fff;border-radius:2px;cursor:pointer;height:50px;justify-self:end;opacity:1;transition:opacity .1s linear;width:150px}.profile__add-button:hover{opacity:.6}@media screen and (max-width:768px){.profile__add-button{width:100%}}
 .profile__info{display:flex;flex-direction:column;justify-content:center;max-width:336px}@media screen and (max-width:768px){.profile__info{justify-content:flex-start}}
 .profile__container{align-items:baseline;display:flex}
-.profile__name{color:#fff;font-size:42px;font-weight:500;line-height:48px;margin:0 18px 8px 0;max-width:294px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:900px){.profile__name{font-size:27px;line-height:33px;margin:0 10px 6px 23px}}@media screen and (max-width:769px){.profile__name{max-width:189px;text-align:center}}
+.profile__name{color:#fff;font-size:42px;font-weight:500;line-height:48px;margin:0 18px 8px 0;max-width:294px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:900px){.profile__name{font-size:27px;line-height:33px}}@media screen and (max-width:769px){.profile__name{margin:0 10px 6px 23px;max-width:189px;text-align:center}}
 .profile__description{color:#fff;font-size:18px;font-weight:400;line-height:22px;margin:0;max-width:336px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:900px){.profile__description{font-size:14px;line-height:17px}}@media screen and (max-width:769px){.profile__description{margin-bottom:36px;max-width:282px;text-align:center}}
 .profile__vector{height:22px;width:22px}@media screen and (max-width:589px){.profile__vector{height:16px;width:16px}}
 .profile__edit-button{background-color:transparent;background-image:url(a1892ea72cb87c8fc3aa.svg);background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;display:inline;height:24px;opacity:1;outline:none;transition:opacity .1s linear;width:24px}.profile__edit-button:hover{opacity:.6}@media screen and (max-width:769px){.profile__edit-button{height:18px;width:18px}}
-.elements{-moz-column-gap:17px;column-gap:17px;display:grid;grid-template-columns:repeat(auto-fill,282px);grid-template-rows:repeat(2,361px);margin:0 auto;max-width:880px;row-gap:20px}@media screen and (max-width:900px){.elements{-moz-column-gap:10px;column-gap:10px;max-width:581px}}@media screen and (max-width:589px){.elements{max-width:282px}}
+.elements{-moz-column-gap:17px;column-gap:17px;display:grid;grid-template-columns:repeat(auto-fill,282px);grid-template-rows:repeat(10,361px);margin:0 auto;max-width:880px;row-gap:20px}@media screen and (max-width:900px){.elements{-moz-column-gap:10px;column-gap:10px;max-width:581px}}@media screen and (max-width:589px){.elements{max-width:282px}}
 .card{background-color:#fff;border-radius:10px;max-width:282px;position:relative}
-.card__picture{background-size:cover;border-radius:10px 10px 0 0;height:282px;width:282px}
-.card__container{align-items:center;display:flex;justify-content:space-between;margin:25px auto 31px;max-width:246px}@media screen and (max-width:589px){.card__container{margin-bottom:22px}}
+.card__picture{background-size:cover;border-radius:10px 10px 0 0;height:282px;min-height:282px;min-width:282px;-o-object-fit:cover;object-fit:cover;width:282px}
+.card__container{align-items:center;display:flex;justify-content:space-between;margin:22px auto;max-width:246px}@media screen and (max-width:589px){.card__container{margin-bottom:22px}}
 .card__description{font-size:24px;font-weight:900;line-height:29.05px;margin:0;max-width:220px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .card__like{background-color:transparent;background-image:url(87ed371465c7a6a1cd01.svg);background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;height:19px;opacity:1;outline:none;transition:opacity .1s linear;transition:transform .4s ease-in;width:22px}.card__like:hover{opacity:.5}
 .card__like_active{background-image:url(fe17a515669479b1e649.svg)}
 .card__delete-button{background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);background-size:contain;border:none;box-shadow:none;cursor:pointer;height:19px;opacity:1;outline:none;padding:0;position:absolute;right:20px;top:20px;transition:opacity .1s linear;width:18px}.card__delete-button:hover{opacity:.6}@media screen and (max-width:589px){.popup__close{height:20px;right:0;width:20px}}
+.card__like-container{display:flex;flex-direction:column}
+.card__like-count{font-size:13px;font-weight:400;margin:3px 0 0;text-align:center}
 .footer{margin:0 auto;max-width:880px;padding-bottom:60px;padding-top:67px}@media screen and (max-width:900px){.footer{padding-bottom:36px;padding-top:48px}}
 .footer__copyright{color:#545454;font-size:18px;font-weight:400;line-height:21.78px;margin:0;padding:0}@media screen and (max-width:900px){.footer__copyright{font-size:14px;line-height:16.94px;margin-left:19px}}
-.popup{align-items:center;background:rgba(0,0,0,.5);height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:opacity .3s ease;visibility:collapse;width:100%}
-.popup_opened{display:flex;opacity:1;visibility:visible}
+.popup{align-items:center;background:rgba(0,0,0,.5);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:all .4s;visibility:hidden;width:100%}
+.popup_opened{opacity:1;transition:opacity .4s;visibility:visible}
 .popup__close{background-color:transparent;background-image:url(2ceb783afbab75916ddc.svg);background-position:50%;background-size:contain;border:none;box-shadow:none;cursor:pointer;height:32px;opacity:1;outline:none;padding:0;position:absolute;right:-40px;top:-40px;transition:opacity .1s linear;width:32px}.popup__close:hover{opacity:.6}@media screen and (max-width:589px){.popup__close{height:20px;right:0;width:20px}}
 .popup__container{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;color:#000;font-family:Inter,Arial,sans-serif;max-width:430px;padding:34px 36px 37px;position:relative;width:34%}@media screen and (max-width:757px){.popup__container{max-width:282px;padding:25px 22px;width:88%}}
-.popup__submit-button{background:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;font-weight:400;height:50px;line-height:21.78px;margin-top:48px;opacity:1;padding:0;transition:opacity .1s linear;width:100%}.popup__submit-button:hover{opacity:.8}@media screen and (max-width:589px){.popup__submit-button{font-size:14px;height:46px;line-height:16.94px;margin-top:43px}}
+.popup__submit-button{background:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;font-weight:400;height:50px;line-height:21.78px;margin-top:28px;opacity:1;padding:0;transition:opacity .1s linear;width:100%}.popup__submit-button:hover{opacity:.8}@media screen and (max-width:589px){.popup__submit-button{font-size:14px;height:46px;line-height:16.94px;margin-top:23px}}
 .popup__title{font-size:24px;font-weight:900;line-height:29.05px;margin:0 0 48px}@media screen and (max-width:589px){.popup__title{font-size:18px;line-height:21.78px;margin-bottom:75px}}
+.popup__title_delete{margin:0}
 .popup__form{font-family:Inter,Arial,sans-serif}
-.popup__profile-info{border:0;display:flex;flex-direction:column;margin:25px 0 0}.popup__profile-info:first-of-type{margin:0}@media screen and (max-width:589px){.popup__profile-info{margin-top:28px}}
+.popup__profile-info{border:0;display:flex;flex-direction:column}
 .popup__input{border:0;border-bottom:1px solid rgba(0,0,0,.2);color:#000;font-size:14px;font-weight:400;line-height:16.94px;margin:0;overflow:hidden;padding-bottom:10px;text-overflow:ellipsis;white-space:nowrap;width:100%}
 .popup_open-picture{background-color:rgba(0,0,0,.9)}
 .popup__picture-container{position:relative}
@@ -40,4 +44,5 @@
 .popup__error_visible{opacity:1}
 .popup__input_error{border-bottom-color:red}
 .popup__submit-button_inactive{background-color:#fff;border:1px solid #000;color:#000;cursor:auto;opacity:.2;pointer-events:none;position:relative}
+.popup__submit-button_delete{margin-top:38px}
 
